# slm-profile-rag

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.app  LICENSE  Makefile  README.md  README_SPACES.md  SETUP_GUIDE.md  app.py  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  run.sh
.github/workflows/: README.md  code-quality.yml  dependency-review.yml  lint.yml  pre-commit.yml  security-scan.yml  test-docker.yml  test-python-reusable.yml  test-python310.yml  test-python311.yml  test-python312.yml  tests.yml
.streamlit/: config.toml
data/documents/: .gitkeep  SAMPLE_README.md
docs/: MAIN_DOCUMENT_GUIDE.md  response_enhancement_flow.md
profile_docs/: sample_profile.md
src/: __init__.py  build_vectorstore.py  config_loader.py  document_processor.py  llm_handler.py  main_document_loader.py  rag_pipeline.py  response_enhancer.py  vectorstore.py
src/retrieval/: __init__.py  base.py  factory.py  fusion.py
src/retrieval/stores/: __init__.py  bm25_store.py
src/retrieval/strategies/: __init__.py  bm25.py  bm25_vector.py  vector.py
src/slm_profile_rag/: __init__.py  app.py  config.py  document_processor.py  rag_pipeline.py
tests/: __init__.py  conftest.py  test_bm25_store.py  test_chat_history.py  test_config.py  test_config_loader.py  test_document_processor.py  test_document_processor_exclusion.py  test_fusion.py  test_llm_handler.py  test_main_document_loader.py  test_rag_with_main_doc.py  test_response_enhancer.py  test_retrieval_base.py  test_retrieval_strategies.py  test_vectorstore.py
